# sot-core

./: CMakeLists.txt
src/: CMakeLists.txt
src/control/: control-gr.cpp  control-pd.cpp
src/debug/: contiifstream.cpp  debug.cpp
src/exception/: exception-abstract.cpp  exception-dynamic.cpp  exception-factory.cpp  exception-feature.cpp  exception-signal.cpp  exception-task.cpp  exception-tools.cpp
src/factory/: additional-functions.cpp  factory.cpp  pool.cpp
src/feature/: feature-1d.cpp  feature-abstract.cpp  feature-generic.cpp  feature-joint-limits-command.h  feature-joint-limits.cpp  feature-line-distance.cpp  feature-point6d-relative.cpp  feature-point6d.cpp  feature-posture.cpp  feature-task.cpp  feature-vector3.cpp  feature-visual-point.cpp  visual-point-projecter.cpp
src/math/: matrix-rotation.cpp  op-point-modifier.cpp  vector-quaternion.cpp
src/matrix/: derivator.cpp  fir-filter.cpp  integrator-abstract.cpp  integrator-euler.cpp  integrator-euler.t.cpp  matrix-constant-command.h  matrix-constant.cpp  matrix-svd.cpp  operator.cpp  vector-constant-command.h  vector-constant.cpp  vector-to-rotation.cpp
src/signal/: signal-cast.cpp
src/sot/: flags.cpp  memory-task-sot.cpp  rotation-simple.cpp  solver-hierarchical-inequalities.cpp  sot-command.h  sot-h.cpp  sot-qr.cpp  sot.cpp  weighted-sot.cpp
src/task/: constraint-command.h  constraint.cpp  gain-adaptive.cpp  gain-hyperbolic.cpp  multi-bound.cpp  task-abstract.cpp  task-command.h  task-conti.cpp  task-pd.cpp  task-unilateral.cpp  task.cpp
src/tools/: binary-int-to-uint.cpp  clamp-workspace.cpp  com-freezer.cpp  device.cpp  event.cpp  exp-moving-avg.cpp  gradient-ascent.cpp  kalman.cpp  (+22 more)
(+128 files in other folders)
